--- a/README
+++ b/README
@@ -1,2 +1,2 @@
 You need to copy and paste the cheats From the File Named 'The Cheats' 
-When you copy and paste it, it will say that the servers on down but it will work.
+When you copy and paste it, it will say that the servers are down but it will work.
